--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,7 @@ a, a:hover {
   background-image: linear-gradient(-20deg, #ff2846 0%, #6944ff 100%);
   display: flex;
   background-image: linear-gradient(-20deg, #ff2846 0%, #6944ff 100%);
+  border-radius: 25px;
 }
 @media screen and (max-width: 768px) {
   .wrapper {
